# nucs

./: .dockerignore  .editorconfig  .flake8  .gitignore  .readthedocs.yaml  CLAUDE.md  CONTRIBUTING.md  DOCUMENTATION.md  Dockerfile  LICENSE.md  README.md  ROADMAP.md  ROADMAP.txt  TODO.txt  header.txt  out.txt  profile.pstats  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-style.txt  requirements.txt
.github/workflows/: publish.yml  python-app.yml  test.yml
articles/: nucs-1-pager.md
articles/20241223 - How to Tackle an Optimization Problem with Constraint Programming/: 20241223-how-to-tackle-an-optimization-problem-with-constraint-programming.md
articles/NuCS vs Choco/: data.md  make_charts.py  nucs-vs-choco.md  summary.txt
articles/Using Constraint Programming to solve math theorems/: using-constraint-programming-to-solve-math-theorems.md
assets/: bibd.cast  golomb.cast  quasigroup.cast  queens.cast
datasets/bacp/: bacp-1.json  bacp-10.json  bacp-11.json  bacp-12.json  bacp-14.json  bacp-16.json  bacp-20.json  bacp-21.json  bacp-22.json  bacp-25.json  bacp-27.json  bacp-6.json  bacp-7.json  bacp-9.json
datasets/car_sequencing/: ecai88.json
datasets/cryptarithmetic/: sendmore.json
datasets/fzn/: test.fzn
datasets/knapsack/: simple.json
datasets/mzn/: queens.mzn
datasets/sudoku/: sudoku1.json
datasets/tsp/: gr21.json  gr24.json
docs/: requirements.txt
docs/source/: conf.py  consistency.rst  consistency_propagators.rst  domains.rst  heuristics.rst  index.rst  installation.rst  logging.rst  minizinc.rst  problems.rst  propagators.rst  queens.py  reference.rst  solvers.rst  solvers_heuristics.rst  statistics.rst  stats.rst  stats_logging.rst  variables.rst  variables_domains.rst
ncs/: memory.py  problem.py  statistics.py  utils.py
ncs/constraints/: constraint.py  sum.py
ncs/heuristics/: first_variable_heuristic.py  heuristic.py  min_value_heuristic.py  min_variable_heuristic.py  smallest_domain_variable_heuristic.py  value_heuristic.py  variable_heuristic.py
ncs/problems/: alpha_problem.py  bibd_problem.py  golomb_problem.py  problem.py  queens_problem.py  schur_lemma_problem.py  sudoku_problem.py
ncs/propagators/: affine_eq_propagator.py  affine_geq_propagator.py  affine_leq_propagator.py  affine_propagator.py  alldifferent.py  alldifferent_lopez_ortiz.py  alldifferent_lopez_ortiz_propagator.py  alldifferent_propagator.py  alldifferent_puget.py  alldifferent_puget_n2.py  alldifferent_puget_n3.py  constant_sum_propagator.py  count_eq_propagator.py  dummy_propagator.py  exactly_eq_propagator.py  lexicographic_leq_propagator.py  max_eq_propagator.py  max_leq_propagator.py  max_propagator.py  min_eq_propagator.py  min_geq_propagator.py  min_propagator.py  mul_propagator.py  propagator.py  propagators.py  shift.py  sum.py  sum_propagator.py
ncs/solvers/: backtrack_solver.py  simple_solver.py  solver.py
nucs/: __main__.py  buckets.py  constants.py  heaps.py  memory.py  numba.py  numba_helper.py  numpy.py  numpy_helper.py  statistics.py  utils.py
nucs/examples/: alpha_problem.py  bibd_problem.py  default_argument_parser.py  donald_problem.py  golomb_problem.py
nucs/fzn/: README.md  __main__.py  builtins.py  errors.py  model.py  output.py  parser.py  register.py  runner.py
nucs/heuristics/: critical_resource_var_heuristic.py  first_not_instantiated_var_heuristic.py  greatest_domain_var_heuristic.py  heuristics.py  largest_maximal_value_var_heuristic.py  last_not_instantiated_var_heuristic.py  max_regret_var_heuristic.py  max_value_dom_heuristic.py  mid_value_dom_heuristic.py  min_cost_dom_heuristic.py  min_earliest_start_var_heuristic.py  min_value_dom_heuristic.py  smallest_domain_var_heuristic.py  smallest_minimal_value_var_heuristic.py  split_high_dom_heuristic.py  split_low_dom_heuristic.py  split_random_dom_heuristic.py  value_dom_heuristic.py  variable_heuristic.py
nucs/problems/: alpha_problem.py  bibd_problem.py  circuit_problem.py  donald_problem.py  golomb_problem.py  knapsack_problem.py  latin_square_problem.py  magic_sequence_problem.py  magic_square_problem.py  permutation_problem.py  problem.py  quasigroup_problem.py  queens_problem.py  schur_lemma_problem.py  sudoku_problem.py
nucs/propagators/: abs_eq_propagator.py  abs_propagator.py  add_c_eq_propagator.py  affine_eq_propagator.py  (+67 more)
scripts/: benchmark.py  diagnose_fzn.py  warm_cache.py
specs/: sequential_search.md
tests/: alldifferent_abstract_test.py  backtrack_solver_test.py  first_variable_heuristic_test.py  matrix_test.py  min_value_heuristic_test.py  problem_test.py  simple_solver_test.py  sum_test.py  test_alldifferent_lopez_ortiz.py  test_alldifferent_puget.py  test_alldifferent_puget_n2.py  test_alldifferent_puget_n3.py  test_backtrack_solver.py  test_buckets.py  test_first_variable_heuristic.py  test_heaps.py  test_min_value_heuristic.py  test_problem.py  test_propagator.py  test_shift.py  test_smallest_domain_variable_heuristic.py  test_solver.py  test_sum.py
(+259 files in other folders)
