[project]
name="NuCS"
version="6.1.1"
authors = [
  { name="Yan Georget", email="yan.georget@gmail.com" },
]
description="A Numpy and Numba based Python library for solving Constraint Satisfaction Problems over finite domains"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "numba==0.61.0",
    "numpy==2.1.3",
    "rich"
]
[project.urls]
Homepage = "https://github.com/yangeorget/nucs"
Issues = "https://github.com/yangeorget/nucs/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120

[tool.setuptools.packages]
find = {}