[project]
name = "NuCS"
version = "9.1.3"
authors = [
    { name = "Yan Georget", email = "yan.georget@gmail.com" },
]
description = "A Numpy and Numba based Python library for solving Constraint Satisfaction Problems over finite domains"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "numba==0.65.0rc1",
    "numpy==2.4.2",
    "rich==14.3.3"
]
[project.optional-dependencies]
dev = [
    "addheader",
    "build",
    "mypy",
    "ruff",
    "sphinx",
    "sphinx-rtd-theme",
    "twine"
]
test = [
    "coverage",
    "pytest"
]
[project.urls]
Homepage = "https://github.com/yangeorget/nucs"
Issues = "https://github.com/yangeorget/nucs/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
[tool.ruff.lint]
ignore = ["E741"]
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.setuptools.packages]
find = { }

[tool.pytest]
testpaths = ["tests"]
